human-connection/deployment-backend.yaml
---
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: nitro-backend
    namespace: human-connection
  spec:
    replicas: 1
    minReadySeconds: 15
    progressDeadlineSeconds: 60
    selector:
      matchLabels:
        human-connection.org/selector: deployment-human-connection-backend
    template:
      metadata:
        labels:
          human-connection.org/selector: deployment-human-connection-backend
        name: "nitro-backend"
      spec:
        containers:
        - name: nitro-backend
          image: humanconnection/nitro-backend:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 4000
          volumeMounts:
            - mountPath: /nitro-backend/public/uploads
              name: uploads
        volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads-claim
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
  status: {}
---
  kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: uploads-claim
    namespace: human-connection
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 2Gi
