human-connection/deployment-neo4j.yaml
---
  apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: nitro-neo4j
    namespace: human-connection
  spec:
    replicas: 1
    strategy: {}
    selector:
      matchLabels:
        human-connection.org/selector: deployment-human-connection-neo4j
    template:
      metadata:
        labels:
          human-connection.org/selector: deployment-human-connection-neo4j
        name: nitro-neo4j
      spec:
        containers:
        - name: nitro-neo4j
          image: humanconnection/neo4j:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 7687
          - containerPort: 7474
          volumeMounts:
            - mountPath: /data/
              name: neo4j-data
        volumes:
        - name: neo4j-data
          persistentVolumeClaim:
            claimName: neo4j-data-claim
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
---
  kind: PersistentVolumeClaim
  apiVersion: v1
  metadata:
    name: neo4j-data-claim
    namespace: human-connection
  spec:
    accessModes:
      - ReadWriteOnce
    resources:
      requests:
        storage: 4Gi
