human-connection/service-neo4j.yaml
apiVersion: v1
kind: Service
metadata:
  name: nitro-neo4j
  namespace: human-connection
  labels:
    human-connection.org/selector: deployment-human-connection-neo4j
spec:
  ports:
  - name: bolt
    port: 7687
    targetPort: 7687
  - name: web
    port: 7474
    targetPort: 7474
  selector:
    human-connection.org/selector: deployment-human-connection-neo4j
